--- a/public/modules/customers/views/create-customer.client.view.html
+++ b/public/modules/customers/views/create-customer.client.view.html
@@ -1,51 +1,56 @@
-<section data-ng-controller="CustomersController">
-    <div class="page-header">
+<section data-ng-controller="CustomersCreateController as customerCtrl">
+
+ <div class="modal-header">
         <h1>New Customer</h1>
     </div>
+
+    <div class="modal-body">
+
     <div class="col-md-12">
+        <form name="createCustomerForm">
 
-        <form class="" data-ng-submit="create()" novalidate>
-            <fieldset>      
+        <div class="form-group">
 
-            <div class="form-group">
-                <div data-ng-show="error" class="text-center text-danger">
-                    <div class="alert alert-danger" role="alert">
-                        <strong data-ng-bind="error"></strong>
-                    </div>
+            <div data-ng-show="error" class="text-center text-danger">
+                <div class="alert alert-danger" role="alert">
+                    <strong data-ng-bind="error"></strong>
                 </div>
             </div>
+        </div>
+            
+        <fieldset> 
 
             <div class="row">
                 <div class="col-sm-6 text-center">
-                    <i class="glyphicon glyphicon-user cust-profile text-primary" ng-class="{'text-primary': referred, 'text-danger': !referred}"></i>
+                    <i class="glyphicon glyphicon-user cust-profile text-primary" ng-class="{'text-primary': customerCtrl.referred, 'text-pink': !customerCtrl.referred}"></i>
                 </div>
 
                 <div class="col-sm-6">
                     <div class="form-grpup">
-                        <label class="control-label" for="firstname">First Name</label>
+                        <label class="control-label" for="firstName">First Name</label>
                         <div class"controls">
-                            <input type="text" data-ng-model="firstName" id="firstname" class="form-control">
+                            <input type="text" data-ng-model="customerCtrl.firstName" id="firstName" class="form-control" required>
                         </div>
                     </div>
 
                     <div class="form-grpup">
-                        <label class="control-label" for="lastname">Last Name</label>
+                        <label class="control-label" for="lastName">Last Name</label>
                         <div class"controls">
-                            <input type="text" data-ng-model="lastName" id="lastname" class="form-control">
+                            <input type="text" data-ng-model="customerCtrl.lastName" id="lastName" class="form-control" required>
                         </div>
                     </div>
 
                     <div class="form-grpup">
                         <label class="control-label" for="suburb">Suburb</label>
                         <div class"controls">
-                            <input type="text" data-ng-model="suburn" id="suburb" class="form-control">
+                            <input type="text" data-ng-model="customerCtrl.suburb" id="suburb" class="form-control">
                         </div>
                     </div>
 
                     <div class="form-grpup">
                         <label class="control-label" for="country">Country</label>
                         <div class"controls">
-                            <input type="text" data-ng-model="country" id="country" class="form-control">
+                            <input type="text" data-ng-model="customerCtrl.country" id="country" class="form-control">
                         </div>
                     </div> 
 
@@ -60,14 +65,14 @@
                     <div class="form-grpup">
                         <label class="control-label" for="phone">Phone</label>
                         <div class"controls">
-                            <input type="text" data-ng-model="phone" id="phone" class="form-control">
+                            <input type="text" data-ng-model="customerCtrl.phone" id="phone" class="form-control">
                         </div>
                     </div>
 
                     <div class="form-grpup">
                         <label class="control-label" for="email">Email</label>
                         <div class"controls">
-                            <input type="text" data-ng-model="email" id="email" class="form-control">
+                            <input type="text" data-ng-model="customerCtrl.email" id="email" class="form-control">
                         </div>
                     </div>
                 </div>
@@ -76,7 +81,7 @@
                     <div class="form-group">
                         <label class="control-label" for="referred">Referred</label>
                         <div class"controls">
-                            <input type="checkbox" data-ng-model="referred" id="referred" class="form-control checkbox-left">
+                            <input type="checkbox" data-ng-model="customerCtrl.referred" id="referred" class="form-control checkbox-left">
                         </div>
                     </div>
 
@@ -84,7 +89,7 @@
                     <div class="form-group">
                         <label class="control-label" for="channel">Channel</label>
                         <div class"controls">
-                            <input type="text" data-ng-model="channel" id="channel" class="form-control">
+                            <input type="text" data-ng-model="customerCtrl.channel" id="channel" class="form-control">
                         </div>
                 </div>
                 </div>
@@ -98,27 +103,25 @@
                    <div class="form-grpup">
                         <label class="control-label" for="Industry">Industry</label>
                         <div class"controls">
-                            <input type="text" data-ng-model="industry" id="industry" class="form-control">
+                            <input type="text" data-ng-model="customerCtrl.industry" id="industry" class="form-control">
                         </div>
                     </div>
 
                 </div>
 
-                <div class="col-sm-6">
-
-                    <div class="form-grpup">
-                        <div class"controls">
-                            <button type="submit" data-ng-model="country" id="country" class="btn btn-large btn-success">
-                            Save & Close
-                            </button>
-                        </div>
-
-                </div>
-
-
             </div>
 
-            </fieldset>
+        </fieldset>
         </form>
     </div>
+
+
+   <div class="modal-footer">
+        <button class="btn btn-success" ng-click="customerCtrl.create();ok(createCustomerForm.$valid);" ng-disabled="createCustomerForm.$invalid">Save and Close
+        </button>
+        <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+    </div>
+
+
+
 </section>
