--- a/public/modules/customers/views/edit-customer.client.view.html
+++ b/public/modules/customers/views/edit-customer.client.view.html
@@ -1,23 +1,129 @@
-<section data-ng-controller="CustomersController" data-ng-init="findOne()">
-    <div class="page-header">
-        <h1>Edit Customer</h1>
+<section data-ng-controller="CustomersUpdateController as customerUpdateCtrl">
+
+    <div class="modal-header">
+        <h1>Update: {{customer.firstName}} {{customer.lastName}}</h1>
     </div>
-    <div class="col-md-12">
-        <form class="form-horizontal" data-ng-submit="update()" novalidate>
-            <fieldset>
-                <div class="form-group">
-                    <label class="control-label" for="name">Name</label>
-                    <div class="controls">
-                        <input type="text" data-ng-model="customer.name" id="name" class="form-control" placeholder="Name" required>
+
+
+    <div class="modal-body">
+
+        <div class="col-md-12">
+            <form name="updateCustomerForm">
+
+                <fieldset>      
+
+                   <div class="form-group">
+                        <div data-ng-show="error" class="text-center text-danger">
+                            <div class="alert alert-danger" role="alert">
+                                <strong data-ng-bind="error"></strong>
+                            </div>
+                        </div>
                     </div>
+
+                <div class="row">
+                    <div class="col-sm-6 text-center">
+                        <i class="glyphicon glyphicon-user cust-profile text-primary" ng-class="{'text-primary': customer.referred, 'text-pink': !customer.referred}"></i>
+                    </div>
+
+                    <div class="col-sm-6">
+                        <div class="form-group">
+                            <label class="control-label" for="firstName">First Name</label>
+                            <div class"controls">
+                                <input type="text" data-ng-model="customer.firstName" id="firstName" class="form-control" required>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label" for="lastName">Last Name</label>
+                            <div class"controls">
+                                <input type="text" data-ng-model="customer.lastName" id="lastName" class="form-control" required>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label" for="suburb">Suburb</label>
+                            <div class"controls">
+                                <input type="text" data-ng-model="customer.suburn" id="suburb" class="form-control">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label" for="country">Country</label>
+                            <div class"controls">
+                                <input type="text" data-ng-model="customer.country" id="country" class="form-control">
+                            </div>
+                        </div> 
+
+
+                    </div>
+
+
                 </div>
-                <div class="form-group">
-                    <input type="submit" value="Update" class="btn btn-default">
+
+                <div class="row">
+                    <div class="col-sm-6 col-sm-push-6">
+                        <div class="form-group">
+                            <label class="control-label" for="phone">Phone</label>
+                            <div class"controls">
+                                <input type="text" data-ng-model="customer.phone" id="phone" class="form-control">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="control-label" for="email">Email</label>
+                            <div class"controls">
+                                <input type="text" data-ng-model="customer.email" id="email" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-sm-pull-6">
+                        <div class="form-group">
+                            <label class="control-label" for="referred">Referred</label>
+                            <div class"controls">
+                                <input type="checkbox" data-ng-model="customer.referred" id="referred" class="form-control checkbox-left">
+                            </div>
+                        </div>
+
+
+                        <div class="form-group">
+                            <label class="control-label" for="channel">Channel</label>
+                            <div class"controls">
+                                <input type="text" data-ng-model="customer.channel" id="channel" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+
+
                 </div>
-				<div data-ng-show="error" class="text-danger">
-					<strong data-ng-bind="error"></strong>
-				</div>
-            </fieldset>
-        </form>
-    </div>
+
+                <div class="row">
+                    <div class="col-sm-6">
+
+                     <div class="form-group">
+                        <label class="control-label" for="Industry">Industry</label>
+                        <div class"controls">
+                            <input type="text" data-ng-model="industry" id="industry" class="form-control">
+                        </div>
+                    </div>
+
+                </div>
+
+
+            </div>
+
+        </fieldset>
+
+    </form>
+</div>
+
+</div>
+
+<div class="modal-footer">
+    <button class="btn btn-success" ng-click="ok(updateCustomerForm.$valid);customerUpdateCtrl.update(customer);" ng-disabled="createCustomerForm.$invalid">Save and Close
+    </button>
+    <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+</div>
+
+
 </section>
