--- a/public/modules/customers/views/create-customer.client.view.html
+++ b/public/modules/customers/views/create-customer.client.view.html
@@ -117,7 +117,7 @@
 
 
    <div class="modal-footer">
-        <button class="btn btn-success" ng-click="customerCtrl.create();ok(createCustomerForm.$valid);" ng-disabled="createCustomerForm.$invalid">Save and Close
+        <button class="btn btn-success" ng-click="customerCtrl.createCustomer();ok(createCustomerForm.$valid);" ng-disabled="createCustomerForm.$invalid">Save and Close
         </button>
         <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
     </div>
