--- a/public/modules/customers/views/customer-list-template.html
+++ b/public/modules/customers/views/customer-list-template.html
@@ -1,23 +1,38 @@
 <div class="list-group">
 
     <div class="col-xs-6 col-sm-4" data-ng-repeat="customer in customersCtrl.customers | filter:searchText">
+
         <a ng-click="customersCtrl.modalUpdate('lg', customer)" class="list-group-item">
 
             <h4 class="cust-prof-list text-center">
                 <i class="glyphicon glyphicon-user" ng-class="{'text-primary': customer.referred, 'text-danger': !customer.referred}"></i>
             </h4>
-        </a>
 
-        <div class"row">
-            <div class="col-xs-10 colxs-offset-1">
 
-                <h4>{{customer.firstName}} {{customer.lastName}} </h4>
+            <div class="row">
 
-                <small class="list-group-item-text text-muted">
-                    Last Updated: <span data-ng-bind="customer.created | date:'medium'"></span>
-                </small>
+                <div class="col-xs-10">
+
+                    <h4>{{customer.firstName}} {{customer.lastName}} </h4>
+
+                    <small class="list-group-item-text text-muted">
+                        <span data-ng-bind="customer.created | date:'medium'"></span>
+
+                        <span class="pull-right">
+                            <button class="btn btn-default btn-lg" ng-click"customersCtrl.remove(customer):alert('remove clicked')">
+                                <i class="glyphicon glyphicon-trash"></i>
+                            </button>
+                        </span>
+                    </small>
+
+                    </div>
+
             </div>
 
+        </a>
+
+        <br>
+        
     </div>
    
 </div>
