--- a/public/modules/customers/views/customer-list-template.html
+++ b/public/modules/customers/views/customer-list-template.html
@@ -1,17 +1,16 @@
 <div class="list-group">
 
-    <div class="col-xs-6 col-sm-4" data-ng-repeat="customer in customersCtrl.customers | filter:searchText">
+    <div class="col-xs-6 col-sm-4 extra-space" data-ng-repeat="customer in customersCtrl.customers | filter:searchText">
 
         <a ng-click="customersCtrl.modalUpdate('lg', customer)" class="list-group-item">
 
             <h4 class="cust-prof-list text-center">
-                <i class="glyphicon glyphicon-user" ng-class="{'text-primary': customer.referred, 'text-danger': !customer.referred}"></i>
+                <i class="glyphicon glyphicon-user" ng-class="{'text-primary': customer.referred, 'text-pink': !customer.referred}"></i>
             </h4>
 
 
             <div class="row">
-
-                <div class="col-xs-10">
+                <div class="col-xs-10" col-xs-offset-1>
 
                     <h4>{{customer.firstName}} {{customer.lastName}} </h4>
 
@@ -19,19 +18,16 @@
                         <span data-ng-bind="customer.created | date:'medium'"></span>
 
                         <span class="pull-right">
-                            <button class="btn btn-default btn-lg" ng-click"customersCtrl.remove(customer):alert('remove clicked')">
+                            <button class="btn btn-danger btn-sm" ng-click="customersCtrl.remove(customer)">
                                 <i class="glyphicon glyphicon-trash"></i>
                             </button>
                         </span>
                     </small>
 
-                    </div>
-
+                </div>
             </div>
 
         </a>
-
-        <br>
         
     </div>
    
