--- a/public/modules/customers/views/edit-customer.client.view.html
+++ b/public/modules/customers/views/edit-customer.client.view.html
@@ -88,12 +88,17 @@
 
                         <div class="form-group">
                             <label class="control-label" for="channel">Channel</label>
+
+                            <p>Selected item is {{customer.channel}}</p>
+
                             <div class"controls">
-                                <input type="text" data-ng-model="customer.channel" id="channel" class="form-control">
+                                <select data-ng-model="customer.channel" id="channel" class="form-control" ng-options="channelItem for channelItem in channelOptions">
+                                    <!--<option value="">{{customer.channel.item}}</option>-->
+                                </select>
                             </div>
+
                         </div>
                     </div>
-
 
                 </div>
 
