--- a/public/modules/customers/css/customers.css
+++ b/public/modules/customers/css/customers.css
@@ -23,9 +23,9 @@
 
 .extra-space{
 	padding-bottom: 15px;
-	padding-top: 15px:;
+	padding-top: 15px;
 }
 
 .input[type="radio"], input[type="checkbox"] {
-	margin: 0px 0 0 !important;
+	margin: 0 0 0 !important;
 } 
